--- a/mediarouter/src/main/res/values/colors.xml
+++ b/mediarouter/src/main/res/values/colors.xml
@@ -28,4 +28,6 @@
     <color name="mr_cast_progressbar_progress_and_thumb_dark">#5195EA</color>
     <color name="mr_cast_progressbar_background_light">#CBCCCD</color>
     <color name="mr_cast_progressbar_background_dark">#5F6368</color>
+
+    <color name="mr_cast_dialog_metadata_background">#99000000</color>
 </resources>
