Add blur effect to MediaRouteCastDialog
1) Added a blur effect to the metadata background image view by using
   Renderscript library on the image bitmap.
2) Added an empty view with a black background and 60% opacity to
   darken the image view.
3) In order to crop the image view at the center, set scale type to
   "centerCrop" and set fixed height of image view.

Bug: 111592415
Test: Manual test with support-v7-demos
Change-Id: I553589df4a4d5dcf57dae12ce0b7c32f265bf964

--- a/mediarouter/src/main/res/values/colors.xml
+++ b/mediarouter/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
 <resources>
     <color name="mr_cast_meta_default_background">#212228</color>
     <color name="mr_dynamic_dialog_icon_dark">#202124</color>
+    <color name="mr_cast_dialog_metadata_background">#99000000</color>
 </resources>
