FloatingToolbar in AndroidX
This CL ports the FloatingToolbar to the Support Library.
The toolbar tries to maintain the style of the toolbar for each
Android version (the look and content of the toolbar has changed
from version to version).

FloatingToolbar.java is basically a copy from the platform with
a few changes to match the use cases we expect to use them in
Support Library (e.g. Smart Linkify).
Changes include:
- Removed the insetsComputer. This is hidden platform API and it
  is used to allow touch events go through the toolbar window so
  users are able to interact with the selection handles that tend
  to be behind (the transparent part of) the toolbar window.
  In Support Library, we don't use the FloatingToolbar where the
  selection handles are visible.
- Clicking outside the Support Library FloatingToolbar always
  dismisses the toolbar. The toolbar is also dismissed when the
  user clicks on the transparent part of the toolbar.

NOTE that we plan to redesign the floating toolbar widget in the
near future so doing a lot of work on it now may not be worthwhile.

Test: ./gradlew appcompat:connectedCheck
Change-Id: I58b162924ac3a2d94a28109212e6750d211cbbdf

--- a/appcompat/res/values-v23/themes_base.xml
+++ b/appcompat/res/values-v23/themes_base.xml
@@ -32,6 +32,10 @@
         <item name="actionMenuTextAppearance">?android:attr/actionMenuTextAppearance</item>
 
         <item name="controlBackground">@drawable/abc_control_background_material</item>
+
+        <!-- Floating toolbar styles -->
+        <item name="floatingToolbarForegroundColor">@color/foreground_material_dark</item>
+        <item name="floatingToolbarPopupBackgroundDrawable">@drawable/floating_popup_background</item>
     </style>
 
     <style name="Base.V23.Theme.AppCompat.Light" parent="Base.V22.Theme.AppCompat.Light">
@@ -46,6 +50,10 @@
         <item name="actionMenuTextAppearance">?android:attr/actionMenuTextAppearance</item>
 
         <item name="controlBackground">@drawable/abc_control_background_material</item>
+
+        <!-- Floating toolbar styles -->
+        <item name="floatingToolbarForegroundColor">@color/foreground_material_light</item>
+        <item name="floatingToolbarPopupBackgroundDrawable">@drawable/floating_popup_background</item>
     </style>
 
 </resources>
