--- a/mediarouter/src/main/res/values/colors.xml
+++ b/mediarouter/src/main/res/values/colors.xml
@@ -23,4 +23,9 @@
 
     <color name="mr_cast_route_divider_light">#1425272B</color>
     <color name="mr_cast_route_divider_dark">#803C4043</color>
+
+    <color name="mr_cast_progressbar_progress_and_thumb_light">#4285F4</color>
+    <color name="mr_cast_progressbar_progress_and_thumb_dark">#5195EA</color>
+    <color name="mr_cast_progressbar_background_light">#CBCCCD</color>
+    <color name="mr_cast_progressbar_background_dark">#5F6368</color>
 </resources>
