Round the edges of the seekbar.
Bug: 78245698
Test: Tested on device
Change-Id: I4a3c3314cf8f6b7a21e93d78c9b105615b503942

--- a/car/core/res/values/dimens.xml
+++ b/car/core/res/values/dimens.xml
@@ -143,9 +143,10 @@ limitations under the License.
     <dimen name="car_sub_header_height">76dp</dimen>
 
     <!-- Seekbar -->
-    <dimen name="car_seekbar_height">6dp</dimen>
+    <dimen name="car_seekbar_height">24dp</dimen>
     <dimen name="car_seekbar_padding">10dp</dimen>
     <dimen name="car_seekbar_thumb_size">24dp</dimen>
+    <dimen name="car_seekbar_thumb_radius">12dp</dimen>
     <dimen name="car_seekbar_thumb_stroke">1dp</dimen>
 
     <!-- Scroll Bar Thumb -->
