--- a/samples/Support7Demos/src/main/res/layout/appcompat_widgets_text_views.xml
+++ b/samples/Support7Demos/src/main/res/layout/appcompat_widgets_text_views.xml
@@ -15,9 +15,10 @@
   ~ limitations under the License.
   -->
 <ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -46,6 +47,15 @@
             android:layout_height="wrap_content"
             android:enabled="false"
             android:text="@string/text_link_disabled"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/text_compund_compat"
+            app:drawableLeftCompat="@drawable/ic_search"
+            app:drawableTopCompat="@drawable/ic_search"
+            app:drawableRightCompat="@drawable/ic_search"
+            app:drawableBottomCompat="@drawable/ic_search" />
 
     </LinearLayout>
 
