Animate CheckBox & Radio buttons.
Backport material <animated-selector>s for RadioButton & CheckBoxs.

Test: AppCompatRadioButtonTest
Test: AppCompatCheckBoxTest
Bug: 110873913
Change-Id: Icf4914a7962f3827e216e3c7d23d1f4660fb8006

--- a/appcompat/res/values/attrs.xml
+++ b/appcompat/res/values/attrs.xml
@@ -1034,6 +1034,8 @@
 
     <declare-styleable name="CompoundButton">
         <attr name="android:button"/>
+        <!-- Compat attr to load backported drawable types -->
+        <attr name="buttonCompat" format="reference"/>
         <!-- Tint to apply to the button drawable. -->
         <attr name="buttonTint" format="color" />
 
