--- a/appcompat/res/values/styles_base.xml
+++ b/appcompat/res/values/styles_base.xml
@@ -377,11 +377,13 @@
 
     <style name="Base.Widget.AppCompat.CompoundButton.CheckBox" parent="android:Widget.CompoundButton.CheckBox">
         <item name="android:button">?android:attr/listChoiceIndicatorMultiple</item>
+        <item name="buttonCompat">@drawable/abc_btn_check_material_anim</item>
         <item name="android:background">?attr/controlBackground</item>
     </style>
 
     <style name="Base.Widget.AppCompat.CompoundButton.RadioButton" parent="android:Widget.CompoundButton.RadioButton">
         <item name="android:button">?android:attr/listChoiceIndicatorSingle</item>
+        <item name="buttonCompat">@drawable/abc_btn_radio_material_anim</item>
         <item name="android:background">?attr/controlBackground</item>
     </style>
 
