--- a/samples/Support7Demos/src/main/res/layout/appcompat_animated_selector.xml
+++ b/samples/Support7Demos/src/main/res/layout/appcompat_animated_selector.xml
@@ -15,7 +15,7 @@
   ~ limitations under the License.
   -->
 
-<LinearLayout
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -24,43 +24,58 @@
         android:orientation="vertical"
         tools:context=".app.AppCompatAnimatedSelector">
 
-    <android.widget.Space
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-
-    <ImageView
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clickable="true"
-            app:srcCompat="@drawable/asl_heart_pressed"/>
+            android:orientation="vertical">
 
-    <android.widget.Space
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
+        <!-- Drawable responds to pressed state -->
+        <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="56dp"
+                android:clickable="true"
+                app:srcCompat="@drawable/asl_heart_pressed"/>
 
-    <!-- button set in code demonstrating usage of AppCompatResources -->
-    <CheckBox
-            android:id="@+id/checkbox1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+        <!-- Demonstrate default checkbox/radiobutton drawables are animated -->
+        <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="56dp"
+                android:text="Check me out"/>
 
-    <android.widget.Space
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
+        <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    <CheckBox
-            android:id="@+id/checkbox2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+            <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Radio 1"/>
 
-    <android.widget.Space
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
+            <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Radio 2"/>
 
-</LinearLayout>
+        </RadioGroup>
+
+        <!-- Button set in code demonstrating usage of AppCompatResources -->
+        <CheckBox
+                android:id="@+id/checkbox1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="56dp"
+                android:layout_gravity="center"/>
+
+        <!-- Repeated to verify constant state -->
+        <CheckBox
+                android:id="@+id/checkbox2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="56dp"
+                android:layout_gravity="center"/>
+
+    </LinearLayout>
+
+</ScrollView>
