Increase the size of the checkbox in the multi select list item and several minor UI fixes for preferences.
Bug: 113176486, 113074561
Test: Tested on device
Change-Id: I47191d7020ffe6b1d19749de4c0ea6d80d2982df

--- a/car/core/res/layout/select_dialog_multichoice_car.xml
+++ b/car/core/res/layout/select_dialog_multichoice_car.xml
@@ -26,5 +26,5 @@
     android:paddingEnd="@dimen/car_keyline_1"
     android:paddingTop="@dimen/car_padding_4"
     android:paddingBottom="@dimen/car_padding_4"
-    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+    android:checkMark="@drawable/btn_check_material_anim"
     android:ellipsize="end" />
