--- a/mediarouter/src/main/res/values/dimens.xml
+++ b/mediarouter/src/main/res/values/dimens.xml
@@ -54,4 +54,9 @@
     <dimen name="mr_cast_group_volume_seekbar_height">4dp</dimen>
     <!-- Size of a seekbar thumb for both route volume and group volume. -->
     <dimen name="mr_cast_seekbar_thumb_size">8dp</dimen>
+
+    <!-- Height of row. -->
+    <dimen name="mr_cast_row_height">48dp</dimen>
+    <!-- Volume slider layout expand/collapse animation duration. -->
+    <integer name="mr_cast_volume_slider_layout_animation_duration_ms">400</integer>
 </resources>
