Styling TextView of MediaRouteDevicePicker/CastDialog
This CL styles TextView showing title, subtitle, header, route name in
above dialogs supporting dynamic group.

Bug: 113303893
Test: Manual test with support-v7-demos
Change-Id: I80e68a89bbc61c5035434032980f6ac5530625b2

--- a/mediarouter/src/main/res/layout/mr_cast_media_metadata.xml
+++ b/mediarouter/src/main/res/layout/mr_cast_media_metadata.xml
@@ -52,19 +52,19 @@
                       android:layout_height="wrap_content"
                       android:maxLines="1"
                       android:ellipsize="end"
-                      android:textSize="14sp" />
+                      android:textAppearance="@style/TextAppearance.MediaRouter.Dynamic.Metadata" />
             <TextView android:id="@+id/mr_cast_meta_subtitle"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:maxLines="1"
                       android:ellipsize="end"
-                      android:textSize="13sp" />
+                      android:textAppearance="@style/TextAppearance.MediaRouter.Dynamic.Metadata.Subtitle" />
         </LinearLayout>
         <Button android:id="@+id/mr_cast_stop_button"
                 android:layout_width="114dp"
                 android:layout_height="36sp"
                 android:background="@drawable/mr_cast_stop"
-                android:textAllCaps="false"
+                android:textAppearance="@style/TextAppearance.MediaRouter.Dynamic.Metadata"
                 android:text="@string/mr_controller_stop_casting" />
     </LinearLayout>
 </RelativeLayout>
