--- a/mediarouter/src/main/res/values/attrs.xml
+++ b/mediarouter/src/main/res/values/attrs.xml
@@ -29,6 +29,8 @@
     </declare-styleable>
 
     <attr name="mediaRouteButtonStyle" format="reference" />
+    <attr name="mediaRouteHeaderItemTextAppearance" format="reference" />
+    <attr name="mediaRouteRouteItemTextAppearance" format="reference" />
     <attr name="mediaRouteCloseDrawable" format="reference" />
     <attr name="mediaRoutePlayDrawable" format="reference" />
     <attr name="mediaRoutePauseDrawable" format="reference" />
