MediaRouteDevicPicker/CastDialog: Add paddingLeft/Right for API 17 and older
This CL addds paddingLeft/Right attributes to views since
paddingStart/End is not supported in API 17 and older.
If paddingStart/End has same value, replace them with paddingLeft/Right.
If paddingStart/End has different value, add paddingLeft with
same value of paddingStart and paddingRight with same value of
paddingEnd.

Bug: 113561753
Test: Manual test with support-v7-demos
Change-Id: Ic1585050be4bd70a80f056fdc4226f4b5947e9fa

--- a/mediarouter/src/main/res/layout/mr_cast_route_item.xml
+++ b/mediarouter/src/main/res/layout/mr_cast_route_item.xml
@@ -21,8 +21,8 @@
               android:orientation="vertical">
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="@dimen/mr_dynamic_dialog_row_height"
-                  android:paddingStart="16dp"
-                  android:paddingEnd="16dp"
+                  android:paddingLeft="16dp"
+                  android:paddingRight="16dp"
                   android:gravity="center_vertical"
                   android:orientation="horizontal">
         <FrameLayout android:layout_width="24dp"
@@ -56,6 +56,7 @@
         <ImageButton android:id="@+id/mr_cast_mute_button"
                      android:layout_width="24dp"
                      android:layout_height="24dp"
+                     android:layout_marginLeft="16dp"
                      android:layout_marginStart="16dp"
                      android:layout_centerVertical="true"
                      android:background="?attr/selectableItemBackgroundBorderless" />
@@ -64,6 +65,7 @@
             android:layout_toRightOf="@id/mr_cast_mute_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
             android:layout_marginEnd="16dp"
             android:layout_centerVertical="true"
             android:contentDescription="@string/mr_controller_volume_slider"
