--- a/mediarouter/src/main/res/layout/mr_cast_group_volume_item.xml
+++ b/mediarouter/src/main/res/layout/mr_cast_group_volume_item.xml
@@ -23,8 +23,8 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingTop="16dp"
-              android:paddingStart="16dp"
-              android:paddingEnd="16dp"
+              android:paddingLeft="16dp"
+              android:paddingRight="16dp"
               android:gravity="center_vertical"
               android:textAppearance="?attr/mediaRouteHeaderTextAppearance" />
     <RelativeLayout android:id="@+id/mr_cast_volume_layout"
