--- a/mediarouter/src/main/res/layout/mr_cast_media_metadata.xml
+++ b/mediarouter/src/main/res/layout/mr_cast_media_metadata.xml
@@ -30,8 +30,8 @@
           android:visibility="gone" />
     <RelativeLayout android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingStart="24dp"
-                    android:paddingEnd="24dp"
+                    android:paddingLeft="24dp"
+                    android:paddingRight="24dp"
                     android:paddingTop="12dp"
                     android:paddingBottom="32dp">
         <ImageButton android:id="@+id/mr_cast_close_button"
