--- a/mediarouter/src/main/res/layout/mr_picker_route_item.xml
+++ b/mediarouter/src/main/res/layout/mr_picker_route_item.xml
@@ -18,8 +18,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="@dimen/mr_dynamic_dialog_row_height"
-              android:paddingStart="16dp"
-              android:paddingEnd="16dp"
+              android:paddingLeft="16dp"
+              android:paddingRight="16dp"
               android:gravity="center_vertical"
               android:orientation="horizontal"
               android:background="?attr/selectableItemBackground">
