MediaRouteDevicPicker/CastDialog: Add paddingLeft/Right for API 17 and older
This CL addds paddingLeft/Right attributes to views since
paddingStart/End is not supported in API 17 and older.
If paddingStart/End has same value, replace them with paddingLeft/Right.
If paddingStart/End has different value, add paddingLeft with
same value of paddingStart and paddingRight with same value of
paddingEnd.

Bug: 113561753
Test: Manual test with support-v7-demos
Change-Id: Ic1585050be4bd70a80f056fdc4226f4b5947e9fa

--- a/mediarouter/src/main/res/layout/mr_cast_media_metadata.xml
+++ b/mediarouter/src/main/res/layout/mr_cast_media_metadata.xml
@@ -20,8 +20,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/mr_cast_meta_default_background"
-                android:paddingStart="24dp"
-                android:paddingEnd="24dp"
+                android:paddingLeft="24dp"
+                android:paddingRight="24dp"
                 android:paddingTop="12dp"
                 android:paddingBottom="32dp">
     <ImageButton android:id="@+id/mr_cast_close_button"
