--- a/appcompat/res/values/attrs.xml
+++ b/appcompat/res/values/attrs.xml
@@ -870,6 +870,8 @@
         <!-- Distance from the bottom of the TextView to the last text baseline. If set, this
              overrides the value set for paddingBottom. -->
         <attr name="lastBaselineToBottomHeight" format="dimension" />
+        <!-- OpenType font variation. -->
+        <attr name="fontVariationSettings" format="string" />
     </declare-styleable>
 
     <declare-styleable name="LinearLayoutCompat">
@@ -1140,6 +1142,7 @@
         <attr name="android:shadowDy"/>
         <attr name="android:shadowDx"/>
         <attr name="android:shadowRadius"/>
+        <attr name="fontVariationSettings" />
     </declare-styleable>
 
     <!-- The set of attributes that describe a AlertDialog's theme. -->
