Support subtitle in car tool bar
Bug: 119514137
Test: use Mojava and CarToolBarTest
Change-Id: Idc89640fe398d4c578f65f68b5a4e0c522ed67b8

--- a/car/core/res/values/attrs.xml
+++ b/car/core/res/values/attrs.xml
@@ -164,7 +164,9 @@ limitations under the License.
         <!-- The dimension size of the title icon. -->
         <attr name="titleIconSize" format="dimension" />
         <attr name="title" format="string" />
+        <attr name="subtitle" format="string" />
         <attr name="titleTextAppearance" format="reference" />
+        <attr name="subtitleTextAppearance" format="reference" />
     </declare-styleable>
 
     <!-- Attributes specifically related to modifying car themes. -->
