--- a/car/core/res/layout/car_toolbar.xml
+++ b/car/core/res/layout/car_toolbar.xml
@@ -34,4 +34,10 @@ limitations under the License.
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:singleLine="true"/>
+    <TextView
+        android:id="@+id/subtitle"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:ellipsize="end"
+        android:singleLine="true"/>
 </merge>
