--- a/samples/SupportCarDemos/src/main/res/layout/activity_car_toolbar.xml
+++ b/samples/SupportCarDemos/src/main/res/layout/activity_car_toolbar.xml
@@ -34,5 +34,6 @@
         android:layout_gravity="bottom"
         android:background="@color/car_card"
         app:logo="@android:drawable/sym_def_app_icon"
-        app:title="@string/toolbar_title"/>
+        app:title="@string/toolbar_title"
+        app:subtitle="@string/toolbar_subtitle"/>
 </FrameLayout>
