Support subtitle in car tool bar
Bug: 119514137
Test: use Mojava and CarToolBarTest
Change-Id: Idc89640fe398d4c578f65f68b5a4e0c522ed67b8

--- a/samples/SupportCarDemos/src/main/res/layout/activity_car_toolbar.xml
+++ b/samples/SupportCarDemos/src/main/res/layout/activity_car_toolbar.xml
@@ -25,7 +25,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:logo="@android:drawable/sym_def_app_icon"
-        app:title="@string/car_toolbar_title"/>
+        app:title="@string/car_toolbar_title"
+        app:subtitle="@string/car_toolbar_subtitle"/>
     <!-- A second toolbar for comparison purposes -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -34,5 +35,6 @@
         android:layout_gravity="bottom"
         android:background="@color/car_card"
         app:logo="@android:drawable/sym_def_app_icon"
-        app:title="@string/toolbar_title"/>
+        app:title="@string/toolbar_title"
+        app:subtitle="@string/toolbar_subtitle"/>
 </FrameLayout>
