Add method to specify a bottom offset in a list.
Also, refactor all ItemDecorations into their own package to reduce the
clutter in the PagedListView. There are no changes code-wise to the
existing ItemDecorations.

Test: ./gradlew car:connectedCheck
Test: Verify on SupportCarDemos
Fixes: 120306486
Change-Id: I703eb512d117891fdcab4217ca36bb15be1cf1e8

--- a/samples/SupportCarDemos/src/main/res/values/themes.xml
+++ b/samples/SupportCarDemos/src/main/res/values/themes.xml
@@ -22,6 +22,7 @@
 
     <!-- The main theme for all activities within the Car Demo. -->
     <style name="CarTheme" parent="Theme.Car.NoActionBar">
+        <item name="android:colorEdgeEffect">@color/car_card_ripple_background_light</item>
     </style>
 
     <!-- A theme for activities within the Car Demo that have a drawer. -->
