Parse and use NavAction arguments at runtime
Navigation <action>s allow <argument> tags, but so far they were
only used by the safe args plugin.

This change adds argument parsing from XML at runtime, and
passing them to destinations when navigating using an action,
without the need for safe args.

BUG: b/111569267
BUG: b/111602491
Test: WIP
Change-Id: I8b60e76393e67a86859b9c1e42fb0da549aced16

--- a/navigation/runtime/src/androidTest/res/navigation/nav_default_arguments.xml
+++ b/navigation/runtime/src/androidTest/res/navigation/nav_default_arguments.xml
@@ -39,6 +39,8 @@
             android:defaultValue="VALUE_ONE"/>
         <argument android:name="test_relative_classname" app:argType=".TestEnum"
                   android:defaultValue="VALUE_TWO"/>
-
+        <action android:id="@+id/my_action" app:destination="@+id/start_test">
+            <argument android:name="test_action_arg" android:defaultValue="123L" />
+        </action>
     </test>
 </navigation>
