Parse and use NavAction arguments at runtime
Navigation <action>s allow <argument> tags, but so far they were
only used by the safe args plugin.

This change adds argument parsing from XML at runtime, and
passing them to destinations when navigating using an action,
without the need for safe args.

BUG: b/111569267
BUG: b/111602491
Test: updated unit tests
Change-Id: I8b60e76393e67a86859b9c1e42fb0da549aced16

--- a/navigation/runtime/src/androidTest/res/navigation/nav_arguments.xml
+++ b/navigation/runtime/src/androidTest/res/navigation/nav_arguments.xml
@@ -19,12 +19,16 @@
             app:startDestination="@+id/start_test">
 
     <test android:id="@+id/start_test">
-        <action android:id="@+id/second" app:destination="@+id/second_test" />
+        <action android:id="@+id/second" app:destination="@+id/second_test">
+            <argument android:name="test_action_overriden_value"
+                      android:defaultValue="override" />
+        </action>
     </test>
 
     <test android:id="@+id/second_test">
         <argument android:name="test_no_default_value" />
         <argument android:name="test_default_value" android:defaultValue="default" />
         <argument android:name="test_overridden_value" android:defaultValue="default" />
+        <argument android:name="test_action_overriden_value" android:defaultValue="default" />
     </test>
 </navigation>
