WIP: navigation args references bug
Reference args are treated differently in safe args
and at runtime. Fix pending.

Test: WIP
BUG: b/111736515
Change-Id: I2495c785e854cf6684bb6020147c1414054e40ae

--- a/navigation/runtime/src/androidTest/res/values/dimens.xml
+++ b/navigation/runtime/src/androidTest/res/values/dimens.xml
@@ -17,4 +17,6 @@
 
 <resources>
     <dimen name="test_dimen_arg">48dp</dimen>
+    <integer name="test_integer_arg">2</integer>
+    <string name="test_string_arg">test string</string>
 </resources>
