--- a/navigation/runtime/src/androidTest/res/navigation/nav_default_arguments.xml
+++ b/navigation/runtime/src/androidTest/res/navigation/nav_default_arguments.xml
@@ -20,9 +20,16 @@
 
     <test android:id="@+id/start_test">
         <argument android:name="test_int" android:defaultValue="12" />
+        <argument app:argType="integer" android:name="test_int2"
+                  android:defaultValue="@integer/test_integer_arg" />
         <argument android:name="test_dimen" android:defaultValue="@dimen/test_dimen_arg" />
         <argument android:name="test_float" android:defaultValue="3.14" />
         <argument android:name="test_reference" android:defaultValue="@style/AppTheme" />
+        <argument android:name="test_reference2"
+                  app:argType="reference"
+                  android:defaultValue="@dimen/test_dimen_arg" />
+        <argument android:name="test_reference3" android:defaultValue="@integer/test_integer_arg" />
+        <argument android:name="test_reference4" android:defaultValue="@string/test_string_arg" />
         <argument android:name="test_boolean" android:defaultValue="true" />
         <argument android:name="test_boolean2" android:defaultValue="false" />
         <argument app:argType="boolean" android:name="test_boolean3" android:defaultValue="true" />
@@ -31,6 +38,8 @@
         <argument app:argType="string" android:name="test_string2" android:defaultValue="true" />
         <argument app:argType="string" android:name="test_string3" android:defaultValue="123L" />
         <argument app:argType="string" android:name="test_string4" android:defaultValue="123" />
+        <argument app:argType="string" android:name="test_string5"
+                  android:defaultValue="@string/test_string_arg" />
         <argument app:argType="string" android:name="test_string_no_default" />
         <argument app:argType="long" android:name="test_long" android:defaultValue="456789013456L" />
         <argument android:name="test_long2" android:defaultValue="456789013456L" />
