--- a/appcompat/res/values/attrs.xml
+++ b/appcompat/res/values/attrs.xml
@@ -1166,6 +1166,7 @@
         <attr name="android:textColorHint"/>
         <attr name="android:textColorLink"/>
         <attr name="android:textStyle" />
+        <attr name="android:textFontWeight" />
         <attr name="android:typeface" />
         <attr name="android:fontFamily" />
         <attr name="fontFamily" />
