Add overflow menu icon to CarToolbar. Refactor some CarToolbar methods to support laying out items from right-to-left as well.
Bug: 120497166
Test: Unit Tests throught Esperesso, UI on device through sample app.
Change-Id: I4cd11b475a89cb3ec517598527f03424b875b0ba

--- a/car/core/res/layout/car_toolbar.xml
+++ b/car/core/res/layout/car_toolbar.xml
@@ -40,4 +40,11 @@ limitations under the License.
         android:layout_width="wrap_content"
         android:ellipsize="end"
         android:singleLine="true"/>
+    <ImageButton
+        android:id="@+id/overflow_menu"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/car_unbounded_ripple_background"
+        android:scaleType="fitXY"
+        android:visibility="gone"/>
 </merge>
