--- a/samples/SupportCarDemos/src/main/res/layout/activity_car_toolbar.xml
+++ b/samples/SupportCarDemos/src/main/res/layout/activity_car_toolbar.xml
@@ -24,7 +24,7 @@
         android:id="@+id/car_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:logo="@android:drawable/sym_def_app_icon"
+        app:titleIcon="@android:drawable/sym_def_app_icon"
         app:title="@string/car_toolbar_title"
         app:subtitle="@string/car_toolbar_subtitle"/>
     <!-- A second toolbar for comparison purposes -->
