Add overflow menu icon to CarToolbar. Refactor some CarToolbar methods to support laying out items from right-to-left as well.
Bug: 120497166
Test: Unit Tests throught Esperesso, UI on device through sample app.
Change-Id: I4cd11b475a89cb3ec517598527f03424b875b0ba

--- a/car/core/res/values/attrs.xml
+++ b/car/core/res/values/attrs.xml
@@ -157,19 +157,21 @@ limitations under the License.
         <attr name="carMenuBarThickness" format="dimension"/>
     </declare-styleable>
 
+    <!-- Attributes for the CarToolbar. -->
     <declare-styleable name="CarToolbar">
         <!-- Drawable to use for the navigation button located at the start of the toolbar. -->
-        <attr name="navigationIcon" format="reference" />
+        <attr name="navigationIcon" format="reference"/>
         <!-- The width of space in which navigation icon will be centered. -->
-        <attr name="navigationIconContainerWidth" format="dimension" />
+        <attr name="navigationIconContainerWidth" format="dimension"/>
         <!-- Drawable to use for the toolbar title icon. -->
-        <attr name="titleIcon" format="reference" />
+        <attr name="titleIcon" format="reference"/>
         <!-- The dimension size of the title icon. -->
-        <attr name="titleIconSize" format="dimension" />
-        <attr name="title" format="string" />
-        <attr name="subtitle" format="string" />
-        <attr name="titleTextAppearance" format="reference" />
-        <attr name="subtitleTextAppearance" format="reference" />
+        <attr name="titleIconSize" format="dimension"/>
+        <attr name="title" format="string"/>
+        <attr name="subtitle" format="string"/>
+        <attr name="titleTextAppearance" format="reference"/>
+        <attr name="subtitleTextAppearance" format="reference"/>
+        <attr name="overflowIcon" format="reference"/>
     </declare-styleable>
 
     <!-- Attributes specifically related to modifying car themes. -->
