--- a/samples/ViewPager2Demos/src/main/res/layout/activity_notablayout.xml
+++ b/samples/ViewPager2Demos/src/main/res/layout/activity_notablayout.xml
@@ -14,13 +14,19 @@
      limitations under the License.
 -->
 
-<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
-    <string name="activity_sample_code">ViewPager2 Demos</string>
-    <string name="label_orientation">Orientation:</string>
-    <string name="label_jump_to">Jump to:</string>
-    <string name="label_jump">Jump</string>
-    <string name="checkbox_smoothscroll">Smooth</string>
-    <string name="checkbox_rotate">Rotate</string>
-    <string name="checkbox_translate">Translate</string>
-    <string name="checkbox_scale">Scale</string>
-</resources>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:background="#FFFFFF">
+
+    <include layout="@layout/controls" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+</LinearLayout>
