--- a/samples/SupportCarDemos/src/main/res/layout/activity_car_toolbar.xml
+++ b/samples/SupportCarDemos/src/main/res/layout/activity_car_toolbar.xml
@@ -14,27 +14,61 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
     <androidx.car.widget.CarToolbar
         android:id="@+id/car_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:titleIcon="@android:drawable/sym_def_app_icon"
+        app:titleIconSize="@dimen/car_avatar_icon_size"
         app:title="@string/car_toolbar_title"
         app:subtitle="@string/car_toolbar_subtitle"/>
+    <LinearLayout
+            android:id="@+id/demo_buttons"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:orientation="horizontal">
+        <Button
+                android:id="@+id/add_action"
+                android:text="@string/button_add_action"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="@dimen/car_button_height"
+                android:layout_marginEnd="@dimen/car_padding_5"/>
+        <Button
+                android:id="@+id/add_if_room"
+                android:text="@string/button_add_if_room"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="@dimen/car_button_height"
+                android:layout_marginEnd="@dimen/car_padding_5"/>
+        <Button
+                android:id="@+id/add_overflow"
+                android:text="@string/button_add_overflow"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="@dimen/car_button_height"
+                android:layout_marginEnd="@dimen/car_padding_5"/>
+        <Button
+                android:id="@+id/clear_menu"
+                android:text="@string/button_clear_menu"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="@dimen/car_button_height"/>
+    </LinearLayout>
     <!-- A second toolbar for comparison purposes -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
+        android:layout_alignParentBottom="true"
         android:background="@color/car_card"
         app:logo="@android:drawable/sym_def_app_icon"
         app:title="@string/toolbar_title"
         app:subtitle="@string/toolbar_subtitle"/>
-</FrameLayout>
+</RelativeLayout>
